fix bugs z-index for secrtion

--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -47,6 +47,7 @@ section {
   z-index: 1;
   padding: 8rem 0;
   background-color: $light;
+  transform: translate3d(0,0,0);
 }
 
 .gl {
